--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- COVER -->
     <div class="container">
-      <div class="toggler" id="toggler"></div>
+      <div class="toggler" id="toggler">Click</div>
       <div class="partLeft" id="partLeft"></div>
       <div class="partRight" id="partRight"></div>
       <div class="partTop" id="partTop"></div>
